# Canvas-Quiz-to-Quizlet

./: README.md  beautiful-soup.py  canvas-to-quizlet.py  pyproject.toml
