[tool.poetry]
name = "canvas-to-quizlet"
version = "0.1.0"
description = ""
authors = ["Elijah Kearl <elijkearl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
